Fix dataloader from loading full 75,000 samples to 1,250 sample windows

--- a/notebooks/05_ssl_pretraining_colab.ipynb
+++ b/notebooks/05_ssl_pretraining_colab.ipynb
@@ -510,7 +510,15 @@
         "id": "j-es4rfwArep"
       },
       "source": [
-        "## Phase 5: Run Full Training (50 Epochs)"
+        "## Phase 5B: Run Full Training (50 Epochs)\n",
+        "\n",
+        "**✅ Fixed**: Dataloader now correctly loads 1,250-sample windows from Phase 5A instead of 75,000-sample full signals.\n",
+        "\n",
+        "Key changes:\n",
+        "- Training script uses `mimic_windows.npy` (653,716 windows)\n",
+        "- Dataloader loads window indices instead of segment indices\n",
+        "- Custom collate function handles quality-filtered samples\n",
+        "- Expected runtime: 8–12 hours on T4 GPU"
       ]
     },
     {
@@ -556,6 +564,28 @@
         "print(\"\\n\" + \"=\"*70)\n",
         "print(\"Starting training...\")\n",
         "print(\"=\"*70)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Clear any old checkpoints from Colab first\n",
+        "import shutil\n",
+        "from pathlib import Path\n",
+        "\n",
+        "checkpoint_ssl_dir = COLAB_DRIVE_PATH / \"checkpoints\" / \"ssl\"\n",
+        "if checkpoint_ssl_dir.exists():\n",
+        "    shutil.rmtree(checkpoint_ssl_dir)\n",
+        "    print(f\"✅ Cleared old checkpoints: {checkpoint_ssl_dir}\")\n",
+        "else:\n",
+        "    print(f\"ℹ️  No old checkpoints found\")\n",
+        "\n",
+        "# Create fresh checkpoint directory\n",
+        "checkpoint_ssl_dir.mkdir(parents=True, exist_ok=True)\n",
+        "print(f\"✅ Fresh checkpoint directory ready: {checkpoint_ssl_dir}\\n\")"
       ]
     },
     {
@@ -794,8 +824,7 @@
         "    \"--config\", str(repo_dir / \"configs/ssl_pretraining.yaml\"),\n",
         "    \"--data-dir\", str(data_dir),\n",
         "    \"--epochs\", \"50\",\n",
-        "    \"--log-dir\", str(repo_dir / \"logs/training\"),\n",
-        "    \"--checkpoint-dir\", str(repo_dir / \"checkpoints/ssl\"),\n",
+        "    \"--batch-size\", \"8\",\n",
         "]\n",
         "\n",
         "print(f\"🚀 Starting Phase 5B training...\\n\")\n",
@@ -825,7 +854,27 @@
         "id": "1YnYU2opN5T-"
       },
       "source": [
-        "### Temperary diagnostic cells"
+        "# Pull latest code from GitHub to get dataloader fixes\n",
+        "import subprocess\n",
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "repo_dir = Path('/content/drive/MyDrive/cardiometabolic-risk-colab')\n",
+        "\n",
+        "print(\"Pulling latest changes from GitHub...\")\n",
+        "result = subprocess.run(\n",
+        "    [\"git\", \"pull\", \"origin\", \"main\"],\n",
+        "    cwd=str(repo_dir),\n",
+        "    capture_output=True,\n",
+        "    text=True\n",
+        ")\n",
+        "\n",
+        "print(result.stdout)\n",
+        "if result.returncode == 0:\n",
+        "    print(\"✅ Code updated successfully (fixes: dataloader windows, custom collate fn)\")\n",
+        "else:\n",
+        "    print(f\"⚠️  Warning: {result.stderr}\")\n",
+        "    print(\"Continuing with local code...\")\n"
       ]
     },
     {
